--- a/index.html
+++ b/index.html
@@ -1,20 +1,36 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
-    <title>tdd todo</title>
+    <title>to do App</title>
     <link rel="stylesheet" href="./style.css">
-  </head>
-  <body>
-    <div id = "todo-container">
-        <ul>
-        </ul>
-    </div>
-    <form id="add-todo">
-      <input type="text" name="description" value="">
-      <input type="submit" name="" value="Submit">
-    </form>
-  </body>
-  <script type="text/javascript" src = "./logic.js"></script>
-  <script type="text/javascript" src = "./dom.js"></script>
+    <script src="https://kit.fontawesome.com/ea21720452.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+    <div class="todo-container">
+        <div class="header">
+            <div class="clear">
+                <i class="fas fa-sync"></i>
+            </div>
+            <div class="content">
+                <ul id="list">
+                    <li class="item">
+                        <i class="fas fa-trash" aria-hidden="true"></i>
+                        <p class="text">Coffee</p>
+                        <i class="far fa-circle" aria-hidden="true"></i>
+                    </li>
+                </ul>
+            </div>
+            <div class="add-todo">
+                <i class="fas fa-plus-circle"></i>
+                <input type="text" name="description" value="" placeholder="Add a to do">
+                <input type="submit" name="" value="Submit">
+            </div>
+        </div>
+</body>
+<script type="text/javascript" src="./logic.js"></script>
+<script type="text/javascript" src="./dom.js"></script>
+
 </html>
