moddified style and html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>to do App</title>
     <link rel="stylesheet" href="./style.css">
+    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light+Two&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/ea21720452.js" crossorigin="anonymous"></script>
 </head>
 
@@ -15,18 +16,17 @@
                 <i class="fas fa-sync"></i>
             </div>
             <div class="content">
-                <ul id="list">
+                <!-- <ul id="list">
                     <li class="item">
                         <i class="fas fa-trash" aria-hidden="true"></i>
                         <p class="text">Coffee</p>
                         <i class="far fa-circle" aria-hidden="true"></i>
                     </li>
-                </ul>
+                </ul> -->
             </div>
             <div class="add-todo">
                 <i class="fas fa-plus-circle"></i>
                 <input type="text" name="description" value="" placeholder="Add a to do">
-                <input type="submit" name="" value="Submit">
             </div>
         </div>
 </body>
