finished css and html - a little JS

--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
         <div class="content">
             <br>
         </div>
-        <form class="add-todo">
-            <input type="text" name="description" value="" placeholder="Add a to do">
-            <input type="submit" name="" id='submitBtn' value="Submit">
-            <!-- <i class="fas fa-plus-circle"></i> -->
-        </form>
+        <div>
+            <form class="add-todo">
+                <input type="text" name="description" value="" placeholder="Add a to do">
+                <input type="submit" name="" id='submitBtn' value="Add">
+                <!-- <i class="fas fa-plus-circle"></i> -->
+            </form>
+        </div>
     </div>
 
 </body>
